# ai-agents

./: .gitignore  .gitinore  1  README.md  git.txt  register_jupyter_kernel.ps1  set_system_path_prefer_python311.ps1
01-llm-api/: README.md  make.ps1
01-llm-api/src/: bot.py
02-aidd/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  ReadMe.md  make.ps1  net.txt  pyproject.toml
02-aidd/.cursor/rules/: conventions.mdc  workflow.mdc
02-aidd/Docs2/: idea.md
02-aidd/docs/: idea.md  tasklist.md  vision.md
02-aidd/prompts/: system.txt
02-aidd/src/aidd/: config.py  dependencies_middleware.py  llm_client.py  main.py  telegram_bot.py
02-aidd/src/aidd/handlers/: __init__.py  plain_text.py  start.py
03-multimodal/: .env.example  Dockerfile  FAR3E79.tmp  FAR4676.tmp  ReadMe.md  docker-compose.yml  pyproject.toml
03-multimodal/docs/: idea.md  tasklist.md  vision.md
03-multimodal/prompts/: system.txt
04-rag-langchain/: .dockerignore  .env.example  Example.docx  Makefile  make.ps1  net.txt  pyproject.toml  report.md  ~$xample.docx
04-rag-langchain/.cursor/rules/: conventions.mdc
04-rag-langchain/docs/: idea.md  tasklist.md  vision.md
04-rag-langchain/prompts/: system.txt
04-rag-langchain/src/aidd/: config.py  conversation_store.py  logging_setup.py  main.py  rag_chain.py  vector_index.py
04-rag-langchain/src/aidd/handlers/: __init__.py  plain_text.py  start.py
05-monitoring-qa/: .env.example  Dockerfile  Makefile  ReadMe.md  docker-compose.host-network.yml  make.ps1  pyproject.toml
05-monitoring-qa/datasets/: 05-rag-qa-dataset.json
(+39 files in other folders)
